# multimodal-video-understanding-engine

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  package.json  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  design_follow_up.yml  milestone_task.yml
.github/workflows/: ci.yml
app/: __init__.py  config.py  database.py  main.py  schemas.py
app/adapters/: __init__.py  audio_extractor.py  frame_analyzer.py  frame_extractor.py  provider_factory.py  scene_detector.py  transcriber.py
app/api/: error_handling.py  videos.py
app/db/: models.py
app/domain/: __init__.py  errors.py  status.py  timeline.py
app/repositories/: video_repository.py
app/services/: __init__.py  processing_lifecycle.py  question_answerer.py  storage_lifecycle.py  storage_paths.py  timeline_builder.py  video_processor.py  video_storage.py
docs/: Multimodal_Video_Understanding_Engine_SES_v0.2.docx  Multimodal_Video_Understanding_Engine_SES_v0.3.docx  Multimodal_Video_Understanding_Engine_SES_v0.4.docx  Multimodal_Video_Understanding_Engine_SES_v0.5.docx  Multimodal_Video_Understanding_Engine_SES_v0.6.docx  Software_Engineering_Specification.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json
frontend/src/: App.tsx  (+1 more)
tests/: test_adapter_config.py  test_ai_adapters.py  test_app.py  test_release_readiness.py  test_storage_lifecycle.py  test_video_api.py  test_video_storage.py
tools/: build_software_engineering_spec_docx.py  generate_spec_diagrams.py
(+24 files in other folders)
