[project]
name = "multimodal-video-understanding-engine"
version = "0.1.0"
description = "FastAPI backend MVP for multimodal video understanding."
readme = "README.md"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = []
